<resources>
    <string name="app_name">EK Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">Shop Now</string>
    <string name="backdrop_subtitle">Select a ride/s for your customer</string>
    <string name="sign_out">Sign out</string>
    <string name="app_label">Enchanted Kingdom</string>
    <string name="search_hint">Search Products</string>
    <string name="section_shop">SHOP</string>
    <string name="cart_label">Cart</string>

    <string name="hint_lname">Last Name</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_bday">Birthday</string>
    <string name="hint_email">Email</string>
    <string name="add_account">Add Customer</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_all_orders">Cancel Order</string>
    <string name="add">Add</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="back">Back</string>
    <string name="cust_choice">Choose Customer</string>
    <string name="cust_selected">Selected Customer:</string>
    <!--printer-->
    <string name="connect_method">connect method</string>
    <string name="info_title">PrinterInformation</string>
    <string name="connect_service">Connect</string>
    <string name="disconnect_service">Disconnect</string>

    <!--instruction-->
    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or conent error!</string>


    <string name="confirm_selected">Confirm Selected Customer</string>

    <!--add customer validation-->
    <string name="err_lname">Please provide a lastname</string>
    <string name="err_fname">Please provide a first name</string>
    <string name="err_bday">Please provide a birthday</string>
    <string name="err_mobile">Please provide a valid mobile (e.g +639075035079)</string>
    <string name="err_mobile2">Phone number already exists</string>
    <string name="err_email">Please provide a valid email</string>
    <string name="err_bday2">Age must not be less than 3yrs old</string>

    <string name="hint_search_cust">Customer Name/Mobile</string>
    <string name="hint_base_url">API Base Url</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="tapto_select_cust">Tap to Select a customer</string>
    <string name="filter">Filter Results</string>
    <string name="hint_search">Search ...</string>
    <string name="confirm_tempMobile">Confirm Mobile</string>
    <string name="hint_mobile_temp">Temporary Mobile Number</string>
    <string name="retry">Retry</string>
    <string name="api_url">Api</string>
    <string name="no_res">No results found</string>

</resources>
