<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="30dp"
    android:paddingBottom="15dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cust_selected"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Customer Name"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/search_customer"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:text="Search"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/add_customerinfo"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_add"
            android:text="@string/add_account"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:text="@string/cancel_all_orders"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>