<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingVertical="30dp"
    android:orientation="vertical">

    <Switch
        android:id="@+id/isDefaultMob"
        android:text="Use Default Mobile  "
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:checked="true"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/etNewMob"
        android:hint="@string/hint_mobile_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_tempNum"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:paddingHorizontal="5dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/confirm_tempNum"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:paddingHorizontal="5dp"
            android:text="@string/confirm_tempMobile"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>